sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.error
AlgShellSort:8: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
 while ((boucle-ecart)=>0 && getValeur(boucle-ecart)>v) {
               ^